# EBA-aula09-RegLogistica

./: README.md  pyproject.toml
notebooks/: predicting-breast-cancer-logistic-regression.ipynb
